<resources>
    <string name="app_name">Latex Manual</string>
    <string name="app_version">Version %1$s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="fav_removed">Documentation removed from favorites</string>
    <string name="fav_added">Documentation added in favorites</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="view_all">View all</string>
    <string name="recent_favorites">Recent Favorites</string>
    <string name="history">History</string>
    <string name="i_of_n">%1$d of %2$d</string>
    <string name="empty_history">Empty History</string>
    <string name="no_favorites">No Favorites</string>
    <string name="confirm_deletion">Confirm deletion</string>
    <string name="remove_doc_from_favorites"><![CDATA[Remove documentation <i><b>%1$s</b></i> from favorites?]]></string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="statistics">Statistics</string>
    <string name="docs_in_database">Documentations in database</string>
    <string name="doc_views">Documentation views</string>
    <string name="unique_doc_views">Unique documentations views</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="clear_navigation_history_permanently">Clear navigation history permanently</string>
    <string name="delete_saved_favorites_permanently">Delete saved favorites permanently</string>
    <string name="settings">Settings</string>
    <string name="clear">Clear</string>
    <string name="this_action_cant_be_undone_q">This action can not be undone. Do you wish to continue?</string>
    <string name="continue_q">Continue?</string>
    <string name="no_fav_to_be_deleted">No favorite to be deleted</string>
    <string name="history_cleaned">History cleaned</string>
    <string name="font_size">Font size</string>
    <string name="doc_reader">Documentation Reader</string>
    <string name="random_doc">Random Documentation</string>
    <string name="number_of_results">Number of results</string>
    <string name="filter">Filter</string>
    <string name="full_index">Full Index</string>
    <string name="navigate">Navigate</string>
    <string name="explore">Explore</string>
    <string name="about">About</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="github_repository">Github repository</string>
    <string name="licensing_information">Licensing information</string>
    <string name="about_description">This is a free and open source app for search LaTeX documentation.</string>
    <string name="logo">Logo</string>
    <string name="license">License</string>
    <string name="unable_to_load_url">Unable to load this url.</string>

    <plurals name="n_favorites_deleted">
        <item quantity="one">%1$d favorite deleted</item>
        <item quantity="other">%1$d favorites deleted</item>
    </plurals>

    <string-array name="font_sizes">
        <item>Small</item>
        <item>Default</item>
        <item>Large</item>
    </string-array>
    <string-array name="search_filters">
        <item>Show all</item>
        <item>Commands only</item>
    </string-array>
</resources>
