<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.github.nmcardoso.latexmanual.AboutActivity"
    android:weightSum="1">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="26sp"
        android:layout_gravity="center"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/txt_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:text="@string/app_version" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/about_description" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:drawablePadding="4dp"
        android:drawableLeft="@drawable/ic_list_checked"
        android:drawableStart="@drawable/ic_list_checked"
        android:text="@string/licensing_information"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_bug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:drawablePadding="4dp"
        android:drawableLeft="@drawable/ic_bug"
        android:drawableStart="@drawable/ic_bug"
        android:text="@string/report_a_bug"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:drawablePadding="4dp"
        android:drawableLeft="@drawable/ic_github"
        android:drawableStart="@drawable/ic_github"
        android:text="@string/github_repository"/>
</LinearLayout>
